--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^12.9.0",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.575.0",
     "marked": "^17.0.3",
