--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dompurify": "^3.3.0",
     "firebase": "^12.9.0",
     "highlight.js": "^11.11.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.575.0",
     "marked": "^17.0.3",
     "react": "^19.2.0",
